S-33: Fixed positioning of user menu popup, and added container behind it.

--- a/closetr-web/src/global-variables.scss
+++ b/closetr-web/src/global-variables.scss
@@ -13,6 +13,12 @@ $slow-ease: 0.7s ease all;
 $mid-ease: 0.5s ease all;
 $fast-ease: 0.3s ease all;
 
+//z-index
+$z-nav-popup-container: -1;
+$z-nav-row: 1;
+$z-nav-popup: 2;
+
+
 // animations
 @keyframes fade-in {
   0%   { opacity: 0; }
