--- a/closetr-web/src/styles.scss
+++ b/closetr-web/src/styles.scss
@@ -146,6 +146,7 @@ body {
   transition: $mid-ease;
   margin-top: 20px;
   margin-bottom: 15px;
+  z-index: $z-nav-row;
   @include sm {
     margin-top: 35px;
     margin-bottom: 20px;
@@ -849,20 +850,38 @@ router-outlet ~ * {
 }
 
 // user menu styles
+.nav-popup-container {
+  position: absolute;
+  top: 0; left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: $z-nav-popup-container;
+}
+
 .nav-popup {
   animation: $a-fade-from-up;
   position: absolute;
-  z-index: 10;
   background-color: $white;
+  z-index: $z-nav-popup;
   border-radius: 5px;
   box-shadow: 3px 3px 12px -3px #bbbbbb;
 }
 
 #user-menu {
-  top: 90px;
-  left: 70px;
+  top: 75px;
+  left: 16px;
   height: 110px;
   width: 140px;
+  @include sm {
+    left: calc(8% + 5px);
+    top: 90px;
+  }
+  @include md {
+    left: calc(13% + 3px);
+  }
+  @include lg {
+    left: calc(17% + 8px);
+  }
   & .menu-item {
     @extend .f-light-blue-md;
     list-style: none;
